- Projeto base dos formulários BPM atualizado e referenciado.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://gnativa.github.io/bpm-base-DEV/css/base.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body data-bs-theme="light">
+<body>
     <nav class="navbar">
         <div class="container-fluid">
             <div class="row">
@@ -83,10 +83,10 @@
     <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/busca.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/factory.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/validador.js"></script>
-    <script src="js/campos/factory.js"></script>
-    <script src="js/modulos/secao.js"></script>
-    <script src="js/modulos/formulario.js"></script>
-    <script src="js/modulos/listaObjetos.js"></script>
+    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/factory.js"></script>
+    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/secao.js"></script>
+    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/formulario.js"></script>
+    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/listaObjetos.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/controlador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/main.js"></script>
 </body>
