--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/validador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/factory.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/secao.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/formulario.js"></script>
+    <script src="js/modulos/formulario.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/listaObjetos.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/controlador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/main.js"></script>
