- Index atualizado para usar bibliotecas locais.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://gnativa.github.io/bpm-base-DEV/css/base.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body> <!-- data-bs-theme="dark" -->
     <nav class="navbar">
         <div class="container-fluid">
             <div class="row">
@@ -65,13 +65,13 @@
     <script>
         "use strict";
     </script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/constantes.js"></script>
+    <script src="js/utilitarios/constantes.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/utilitario.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/mensagem.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/excecaoMensagem.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/consultor.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/parametros.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/campo.js"></script>
+    <script src="js/campos/campo.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/fonte.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/entrada.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/lista.js"></script>
@@ -82,11 +82,11 @@
     <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/tela.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/busca.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/factory.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/validador.js"></script>
+    <script src="js/modulos/validador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/factory.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/secao.js"></script>
     <script src="js/modulos/formulario.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/listaObjetos.js"></script>
+    <script src="js/modulos/listaObjetos.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/controlador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/main.js"></script>
 </body>
