- Classe Campo atualizada para se adequar às listas de objeto.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/consultor.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/parametros.js"></script>
     <script src="js/campos/campo.js"></script>
+    <script src="js/campos/colecao.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/fonte.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/entrada.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/lista.js"></script>
@@ -84,10 +85,10 @@
     <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/factory.js"></script>
     <script src="js/modulos/validador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/factory.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/secao.js"></script>
+    <script src="js/modulos/secao.js"></script>
     <script src="js/modulos/formulario.js"></script>
     <script src="js/modulos/listaObjetos.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/controlador.js"></script>
+    <script src="js/modulos/controlador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/main.js"></script>
 </body>
 </html>
