--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         "use strict";
     </script>
     <script src="js/utilitarios/constantes.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/utilitario.js"></script>
+    <script src="js/utilitarios/utilitario.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/mensagem.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/excecaoMensagem.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/consultor.js"></script>
@@ -89,6 +89,6 @@
     <script src="js/modulos/formulario.js"></script>
     <script src="js/modulos/listaObjetos.js"></script>
     <script src="js/modulos/controlador.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
