- Métodos de carregamento da classe FormularioBase para listas de objeto temporariamente copiados para a classe Formulario;
- Conversores importados;

- Classe ListaObjetos atualizada para permitir acesso à sua lista de campos.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <script src="js/modulos/validador.js"></script>
     <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/factory.js"></script>
     <script src="js/modulos/secao.js"></script>
+    <script src="js/campos/conversor.js"></script>
     <script src="js/modulos/formulario.js"></script>
     <script src="js/modulos/listaObjetos.js"></script>
     <script src="js/modulos/controlador.js"></script>
