--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Container para toasts (mensagens que podem ser dispensadas) -->
         <div id="containerMensagens" class="componente toast-container position-fixed top-0 end-0 p-3"></div>
         <!-- Botão para envios de teste -->
-        <div class="container-fluid">
+        <div class="container-fluid d-none">
             <div class="row mt-3">
                 <div class="col d-flex justify-content-end">
                     <button id="botaoEnviar" type="button" class="btn botao">Enviar</button>
