- Texto auxiliar ao fim da página alterado.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col text-end">
-                        <em class="text-end">Os campos destacados são obrigatórios.</em>
+                        <em class="text-end">Os campos em destque são obrigatórios.</em>
                     </div>
                 </div>
             </div>
