--- a/index.html
+++ b/index.html
@@ -65,31 +65,31 @@
     <script>
         "use strict";
     </script>
-    <script src="js/utilitarios/constantes.js"></script>
-    <script src="js/utilitarios/utilitario.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/mensagem.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/excecaoMensagem.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/consultor.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/parametros.js"></script>
-    <script src="js/campos/campo.js"></script>
-    <script src="js/campos/colecao.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/fonte.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/entrada.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/lista.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/texto.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/anexo.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/checkbox.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/data.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/tela.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/busca.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/factory.js"></script>
-    <script src="js/modulos/validador.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/factory.js"></script>
-    <script src="js/modulos/secao.js"></script>
-    <script src="js/campos/conversor.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/utilitarios/constantes.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/utilitarios/utilitario.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/utilitarios/mensagem.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/servicos/excecaoMensagem.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/servicos/consultor.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/servicos/parametros.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/campo.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/colecao.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/fonte.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/entrada.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/lista.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/texto.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/anexo.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/checkbox.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/data.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/telas/tela.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/telas/busca.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/telas/factory.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/validador.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/factory.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/secao.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/listaObjetos.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/conversor.js"></script>
     <script src="js/modulos/formulario.js"></script>
-    <script src="js/modulos/listaObjetos.js"></script>
-    <script src="js/modulos/controlador.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/controlador.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/main.js"></script>
 </body>
 </html>
