- Atualização de homologação para produção.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="https://gnativa.github.io/bpm-base-DEV/css/base.css">
+    <link rel="stylesheet" href="https://gnativa.github.io/bpm-base/css/base.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body> <!-- data-bs-theme="dark" -->
@@ -65,31 +65,31 @@
     <script>
         "use strict";
     </script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/constantes.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/utilitario.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/utilitarios/mensagem.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/excecaoMensagem.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/consultor.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/servicos/parametros.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/campo.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/colecao.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/fonte.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/entrada.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/lista.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/texto.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/anexo.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/checkbox.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/data.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/tela.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/busca.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/telas/factory.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/validador.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/factory.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/secao.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/listaObjetos.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/campos/conversor.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/utilitarios/constantes.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/utilitarios/utilitario.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/utilitarios/mensagem.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/servicos/excecaoMensagem.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/servicos/consultor.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/servicos/parametros.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/campo.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/colecao.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/fonte.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/entrada.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/lista.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/texto.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/anexo.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/checkbox.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/data.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/telas/tela.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/telas/busca.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/telas/factory.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/validador.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/factory.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/secao.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/listaObjetos.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/campos/conversor.js"></script>
     <script src="js/modulos/formulario.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/modulos/controlador.js"></script>
-    <script src="https://gnativa.github.io/bpm-base-DEV/js/main.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/modulos/controlador.js"></script>
+    <script src="https://gnativa.github.io/bpm-base/js/main.js"></script>
 </body>
 </html>
